--- a/Kconfig
+++ b/Kconfig
@@ -15,6 +15,10 @@ menu "ush"
 		int "command line buffer size"
         default 256
 
+	config USH_PROMPT
+		string "shell prompt"
+		default "esp32"
+
 	config USH_VIMODE
 		bool "vi editing moe"
 		default y
